--- a/styles.css
+++ b/styles.css
@@ -352,8 +352,8 @@
 }
 
 .Pharma h5 {
-  background: #fff6e9;
-  color: #ffa217;
+  background: #e0fff8;
+  color: #2ab090;
   font-family: "IBM Plex Mono", monospace;
   font-size: 14px;
   padding: 6px 12px;
@@ -380,7 +380,7 @@
 }
 
 .btn_green_c {
-  background: #ffa217;
+  background: #2ab090;
   color: #ffffff;
   border-radius: 4px;
   display: inline-flex;
