--- a/styles.css
+++ b/styles.css
@@ -856,6 +856,76 @@
     width: 400px;
   }
 
+  .Recent_work {
+  width: 100%;
+  max-width: 767px;
+  margin: 20px auto;
+  background-position: 10% 20%;
+}
+
+ .Recent_h {
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 1px;
+  }
+
+
+  .Recent_h p{
+  margin-top: 30px;
+  font-size: 13px;
+  line-height: 1.5;
+  max-width: 400px;
+}
+
+  .Markgroup_area {
+  display: flex;
+  flex-direction: column;
+  font-size: 10rem;
+  gap: 2rem;
+  max-width: 767px;
+  margin: center;
+  padding: 0.9rem;
+}
+
+  .Markgroup1,
+  .Markgroup2 {
+    width: 110%;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+ .Markgroup_text h4 {
+ font-size: 21px;
+}
+
+  .Markgroup_text p {
+  font-size: 14px;
+}
+
+  .btn_green_M {
+    max-width: 100%;
+    border-radius: 20px;
+    width: 150px;
+    margin-bottom: 50px;
+    justify-content: center;
+    
+  }
+
+  .Markgroup_image1 img{
+  width: 80%;
+  height: auto;
+  }
+
+  .Markgroup_image2 img{
+  width: 80%;
+  height: auto;
+  }
+
+  .vector1{
+  width: 50%;
+  height: auto;
+  }
+
   .get_in_touch #texto {
     width: 90%; ;
   }
